# arion

./: .envrc  .gitignore  CHANGELOG.md  HACKING.md  LICENSE  README.asciidoc  README.md  antora-playbook.yml  arion-compose.cabal  arion.nix  bors.toml  build  default.nix  flake.nix  live-check  live-unit-tests  nixos-module.nix  pkgs.nix  repl  run-arion  run-arion-quick  run-arion-via-nix  shell.nix  update-options
Nuph/: nucloud.py
dev/: flake-module.nix  flake.nix
doc/: default.nix
doc/manual/: .gitignore  Makefile  build  default.nix  installation.asciidoc  introduction.asciidoc  live-build  manual.xml  options-to-docbook.xsl  preview.html  style.css
docs/: README.md  antora.yml  flake-module.nix  options.nix
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/full-nixos/: arion-compose.nix
docs/modules/ROOT/examples/minimal/: arion-compose.nix
docs/modules/ROOT/examples/nixos-unit/: arion-compose.nix
docs/modules/ROOT/pages/: deployment.adoc  index.adoc  options.adoc
docs/modules/ROOT/partials/: NixOSOptions.adoc
examples/custom-image/: arion-compose.nix
examples/flake/: arion-compose.nix  arion-pkgs.nix  flake.nix
examples/full-nixos/: arion-compose.nix  arion-pkgs.nix
examples/minimal/: arion-compose.nix  arion-pkgs.nix  service-webserver.nix
examples/nixos-unit/: arion-compose.nix
examples/todomvc/: README.md
examples/traefik/: arion-compose.nix
nix/: arion.nix  ci.nix  compat.nix  default.nix  haskell-arion-compose.nix  haskell-overlay.nix  nixpkgs.nix  overlay.nix  sources.json
nix/upstreamable/: default.nix
src/: arion
src/arion-image/: Dockerfile  passwd
src/haskell/exe/: Main.hs
src/haskell/lib/Arion/: Aeson.hs  DockerCompose.hs  ExtendedInfo.hs  Images.hs  Nix.hs  Services.hs
src/haskell/test/: Spec.hs  TestMain.hs
src/haskell/test/Arion/: FooSpec.hs  NixSpec.hs
src/haskell/testdata/: docker-compose-example.json
src/haskell/testdata/Arion/NixSpec/: arion-compose.json  arion-compose.nix  arion-context-compose.json  arion-context-compose.nix
src/haskell/testdata/Arion/NixSpec/build-context/: Dockerfile
src/nix/: docker-compose-module.nix  eval-composition.nix  eval-docker-compose.nix  eval-service.nix  lib.nix  modules.nix  service-host-store.nix  service.nix
src/nix/modules/composition/: arion-base-image.nix  composition.nix  deployment.nix  docker-compose.nix  host-environment.nix  images.nix  networks.nix  secrets.nix  service-info.nix  text-secrets.nix
src/nix/modules/composition/deployment/: docker.nix  podman.nix
src/nix/modules/lib/: README.md  assert.nix
src/nix/modules/networks/: network.nix
src/nix/modules/nixos/: container-systemd.nix  default-shell.nix
src/nix/modules/secrets/: secret.nix
src/nix/modules/service/: all-modules.nix  check-sys_admin.nix  context.nix  default-exec.nix  docker-compose-service.nix  extended-info.nix  host-store.nix  host.nix  image-recommended.nix  image.nix  ngrok.nix  nixos-init.nix  nixos.nix
tests/: default.nix  flake-module.nix
tests/arion-test/: default.nix
tests/arion-test-perl/: README.md  default.nix
tests/module-options-arion-test/: default.nix
tests/nixos-virtualization-arion-test/: README.md  arion-compose.nix  arion-pkgs.nix  test.nix
tests/nixos-virtualization-arion-test/kafka/: server.properties
tests/nixos-virtualization-arion-test/zookeeper/: log4j.properties  zoo.cfg
tests/testcases/secrets/: arion-compose.nix
